# rust_rest_api_boilerplate

./: Cargo.toml  example.env
migrations/: 0001_initial.sql
src/: main.rs
src/controllers/: controller_auth.rs  controller_user.rs  mod.rs
src/database/: db.rs
src/errors/: errors.rs
src/models/: mod.rs  model_claim.rs  model_user.rs
src/routes/: mod.rs  route_auth.rs  route_user.rs
src/utils/: mod.rs  utils_auth.rs
src/validators/: mod.rs  validator_user.rs
