[package]
name = "loot_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tower-http = { version = "0.4.0", features = ["fs"] }
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.75"
rcrypt = "0.4.0"
bs58 = "0.5.0"
openssl = "0.10.57"
hex = "0.4.3"
jsonwebtoken = "9.1.0"
solana-sdk = { version = "1.17.2", features = ["full"] }


